cmake_minimum_required(VERSION 3.5)
project(study_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(study_cpp main.cpp)
add_executable(exercises-0-3 exercises-0/exercise-0-3.cpp)
add_executable(hello_body hello_body.cpp)
add_executable(hello_body2 hello_body2.cpp)
add_executable(exercise-1-2 exercises-1/exercise-1-2.cpp)
add_executable(exercise-1-3 exercises-1/exercise-1-3.cpp)
add_executable(exercise-1-5 exercises-1/exercise-1-5.cpp)
add_executable(exercise-1-6 exercises-1/exercise-1-6.cpp)
add_executable(main exercises-2/main.cpp)
add_executable(exercise-2-5 exercises-2/exercise-2-5.cpp)
add_executable(main-3 exercises-3/main.cpp)
add_executable(exercise-3-2 exercises-3/exercise-3-2.cpp)
add_executable(exercise-3-3 exercises-3/exercise-3-3.cpp)
add_executable(exercise-3-4 exercises-3/exercise-3-4.cpp)
add_executable(exercise-3-5 exercises-3/exercise-3-5.cpp)