cmake_minimum_required(VERSION 3.5)
project(study_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(study_cpp main.cpp)
add_executable(exercises-0-3 exercises-0/exercise-0-3.cpp)
add_executable(hello_body exercises-0/main.cpp)
add_executable(hello_body2 exercises-1/main.cpp)
add_executable(exercise-1-2 exercises-1/exercise-1-2.cpp)
add_executable(exercise-1-3 exercises-1/exercise-1-3.cpp)
add_executable(exercise-1-5 exercises-1/exercise-1-5.cpp)
add_executable(exercise-1-6 exercises-1/exercise-1-6.cpp)
add_executable(main exercises-2/main.cpp)
add_executable(exercise-2-5 exercises-2/exercise-2-5.cpp)
add_executable(main-3 exercises-3/main.cpp)
add_executable(exercise-3-2 exercises-3/exercise-3-2.cpp)
add_executable(exercise-3-3 exercises-3/exercise-3-3.cpp)
add_executable(exercise-3-4 exercises-3/exercise-3-4.cpp)
add_executable(exercise-3-5 exercises-3/exercise-3-5.cpp)
# exercises-4
add_executable(main-4 exercises-4/main.cpp exercises-4/median.cpp exercises-4/median.h exercises-4/Student_info.cpp exercises-4/Student_info.h exercises-4/grade.cpp exercises-4/grade.h)
add_executable(exercise-4-2 exercises-4/exercise-4-2/exercise-4-2.cpp)
add_executable(exercise-4-5 exercises-4/exersice-4-5/exercise-4-5.cpp)